# TitWal

./: pyproject.toml
CryptoPulses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
CryptoPulses/migrations/: 0001_initial.py
settings/: base.py  urls.py
